Fix of extra space

--- a/src/Components/Experience/experience.module.css
+++ b/src/Components/Experience/experience.module.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
-
+body{
+  background-color:#222831;
+}
 .background {
   font-family: "Questrial", sans-serif !important;
   text-align: left;
   position: absolute;
   margin-top: 90px;
   width: 100%;
-  height: 130%;
   background-color: #222831;
 }
 .img {
